# UTAustinX

./: .gitignore  README.md
Lab10_TrafficLight/: Lab10.axf  Lab10.build_log.htm  Lab10.htm  Lab10.map  Lab10.uvgui.eduran  Lab10.uvopt  Lab10.uvproj  Lab10_Lab10.dep  TableTrafficLight.c  tabletrafficlight.crf
Lab11_UART/: Lab11.axf  Lab11.build_log.htm  Lab11.htm  Lab11.map  Lab11.uvgui.eduran  Lab11.uvopt  Lab11.uvproj  Lab11_Lab11.dep  UART.c  uart.crf
Lab12_TuningFork/: README.md  TuningFork.c
Lab13_DAC/: DAC.c  DAC.h  Lab13.c  Piano.c  Piano.h  README.md  Sound.c  Sound.h  TExaS.h  tm4c123gh6pm.h
Lab14_ADC/: ADC.c  ADC.h  MeasurementOfDistance.c  Nokia5110.h  README.md  VirtualNokia5110.c
Lab15_SpaceInvaders/: .gitignore  CMakeLists.txt  README.md  SpaceInvaders.c  TODO.md  platformio.ini
Lab15_SpaceInvaders/assets/tm4c123gh6pm/: tm4c123gh6pm_startup_ccs.c
Lab15_SpaceInvaders/cmake/: StaticAnalyzers.cmake
Lab15_SpaceInvaders/cmake/toolchains/tm4c123g/: startup.c  tm4c123g.cmake  tm4c123g.ld  tm4c123gh6pm.h  tm4c123gh6pm_startup.c
Lab15_SpaceInvaders/docs/: REQUIREMENTS.md
Lab15_SpaceInvaders/include/: tm4c123gh6pm.h
Lab15_SpaceInvaders/lib/joystick/: joystick.c  joystick.h
Lab15_SpaceInvaders/src/: CMakeLists.txt  main.c
Lab15_SpaceInvaders/utils/: ek-tm4c123gxl.cfg
Lab2_HelloLaunchPad/: HelloLaunchPad.build_log.htm  HelloLaunchPad.htm  Lab2.uvgui.eduran  Lab2.uvgui_eduran.bak  Lab2.uvopt  Lab2.uvproj  Lab2_HelloLaunchPad.dep  Lab2_uvopt.bak
Lab4_IO/: IO.axf  IO.build_log.htm  IO.htm  IO.map  Lab4.uvgui.eduran  Lab4.uvopt  Lab4_IO.dep  main.c  main.crf
Lab5_FunctionsInC/: FunctionsInC.axf  FunctionsInC.build_log.htm  FunctionsInC.htm  FunctionsInC.map  Lab5.uvgui.eduran  Lab5.uvgui_eduran.bak  Lab5.uvopt  Lab5_FunctionsInC.dep  Lab5_uvopt.bak  main.c  main.crf  main.d
Lab6_BranchingFunctionsDelays/: BranchingFunctionsDelays.c  Lab6.axf  Lab6.build_log.htm  Lab6.htm  Lab6.map  Lab6.uvgui.eduran  Lab6.uvgui_eduran.bak  Lab6.uvopt  Lab6.uvproj  Lab6_Lab6.dep  branchingfunctionsdelays.crf  branchingfunctionsdelays.d
Lab7_HeartBlock/: Lab7.axf  Lab7.build_log.htm  Lab7.htm  Lab7.map  Lab7_Lab7.dep  main.c  main.crf
Lab8_SwitchLEDinterface/: Lab8.axf  Lab8.build_log.htm  Lab8.htm  Lab8.map  Lab8_Lab8.dep  SwitchLEDInterface.c  switchledinterface.crf
Lab9_FunctionalDebugging/: Lab9.axf  Lab9.build_log.htm  Lab9.htm  Lab9.map  Lab9.uvgui.eduran  Lab9.uvopt  Lab9.uvproj  Lab9_Lab9.dep  main.c  main.crf
